--- a/calculator.html
+++ b/calculator.html
@@ -7,6 +7,7 @@
         font-family: Comic Sans MS;
         max-width:100%;
         height:auto;
+        color: blue;
 }
     
     .botao {
@@ -107,7 +108,7 @@
         left:36%;
         top:28.5%;
         margin-left:30px;
-        margin-top:-20px;
+        margin-top:24px;
         box-shadow: #000 20px 20px 20px;
         position:static;
         max-width:100%;
